--- a/.github/workflows/build-release-and-upload.yml
+++ b/.github/workflows/build-release-and-upload.yml
@@ -14,9 +14,9 @@ jobs:
       uses: actions/checkout@v3
     - uses: actions/setup-java@v3
       with:
-        distribution: 'adopt'
+        distribution: 'temurin'
         java-version: '8'
-    - uses: eskatos/gradle-command-action@v2
+    - uses: gradle/gradle-build-action@v2
       with:
         arguments: build
     - name: Get the version
