--- a/.github/workflows/gradle-build-main.yml
+++ b/.github/workflows/gradle-build-main.yml
@@ -5,6 +5,11 @@ on:
     branches:
       - main
       - releases/*
+  pull_request:
+    types:
+      - opened
+      - synchronize
+      - reopened
 
 jobs:
   gradle-check:
@@ -13,9 +18,9 @@ jobs:
     - uses: actions/checkout@v3
     - uses: actions/setup-java@v3
       with:
-        distribution: 'adopt'
+        distribution: 'temurin'
         java-version: '8'
-    - uses: eskatos/gradle-command-action@v2
+    - uses: gradle/gradle-build-action@v2
       name: gradle check
       with:
         arguments: check
